theme/static_src/src/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    form :is(label, span) {
        @apply dark:text-jumbo-100;
    }
}

@layer components {
    .kho-button-border {
        @apply dark:border-jumbo-600  border-gray-300;
    }

    .kho-button-border-focus {
        @apply dark:focus:ring-cornflower-400 dark:focus:border-cornflower-400 focus:border-cornflower-400 focus:ring-cornflower-500;
    }

    .kho-button-bg {
        @apply dark:bg-jumbo-700 bg-white;
    }

    .kho-button-bg-darker {
        @apply dark:bg-jumbo-800 bg-gray-50;
    }

    .kho-button-bg-hover {
        @apply dark:hover:bg-jumbo-800 hover:bg-gray-50;
    }

    .kho-button-bg-disabled {
        @apply disabled:dark:bg-jumbo-700 disabled:bg-slate-700;
    }

    .kho-button-text {
        @apply dark:text-jumbo-50 text-gray-700 disabled:text-slate-50;
    }

    .kho-button-active {
        @apply dark:bg-jumbo-700 dark:border-cornflower-100/50 dark:text-jumbo-50 border-cornflower-400 bg-cornflower-50 text-cornflower-600;
    }

    .kho-button-forms {
        @apply flex justify-center py-2 px-4 border border-transparent rounded-xl shadow-sm text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 dark:focus:ring-offset-jumbo-900;
    }

    .kho-button-submit {
        @apply bg-cornflower-600 hover:bg-cornflower-700 focus:ring-cornflower-500;
    }

    .kho-button-submit-delete {
        @apply bg-flamingo-600 hover:bg-flamingo-700 focus:ring-flamingo-500;
    }

    .pagination_buttons {
        @apply kho-button-bg kho-button-bg-hover kho-button-bg-disabled kho-button-text kho-button-border kho-button-border-focus relative inline-flex items-center border px-2 py-2 text-sm font-medium disabled:cursor-not-allowed;
    }

    .next_pagination_button {
        @apply pagination_buttons rounded-r-lg;
    }

    .previous_pagination_button {
        @apply pagination_buttons rounded-l-lg;
    }

    .flyout_button {
        @apply dark:text-jumbo-100 dark:hover:text-jumbo-50 dark:focus:ring-cornflower-400 focus:ring-cornflower-500 inline-flex items-center rounded-xl text-base font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 dark:focus:ring-offset-jumbo-900;
    }

    .flyout_bottom_items {
        @apply dark:text-jumbo-50 dark:hover:bg-jumbo-700 rounded-xl p-3 text-base font-medium text-gray-900 hover:bg-gray-100;
    }

    .mobile_menu_grid_items {
        @apply dark:text-jumbo-50 dark:hover:text-jumbo-100 rounded-xl text-base font-medium text-gray-900 hover:text-gray-700;
    }

    .profile_tab {
        @apply dark:text-jumbo-50 dark:hover:border-jumbo-500 whitespace-nowrap border-b-2 py-4 px-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700;
    }

    .profile_tab.profile_active_tab {
        @apply dark:border-cornflower-400 dark:text-jumbo-300 border-cornflower-500 text-gray-900;
    }

    .profile_tab:not(.profile_active_tab) {
        @apply border-transparent;
    }

    .superbutton_base {
        @apply kho-button-border kho-button-bg kho-button-bg-hover kho-button-bg-disabled kho-button-text kho-button-border-focus relative inline-flex items-center border py-2 text-sm font-medium focus:z-10 focus:outline-none focus:ring-1;
    }

    .superbutton_main_action {
        @apply superbutton_base rounded-l-lg px-4;
    }

    .superbutton_dropdown_button {
        @apply superbutton_base rounded-r-lg px-2;
    }

    .superbutton_dropdown_items {
        @apply dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:divide-jumbo-600 absolute right-0 mt-2 w-56 origin-top-right divide-y divide-gray-100 rounded-xl bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
    }

    .superbutton_dropdown_items .dropdown_item_container {
        @apply first:!pt-0 last:!pb-0;
    }

    .superbutton_dropdown_items
        .dropdown_item_container:first-of-type
        .dropdown_item:first-of-type {
        @apply rounded-t-xl;
    }

    .superbutton_dropdown_items
        .dropdown_item_container:last-of-type
        .dropdown_item:last-of-type {
        @apply rounded-b-xl;
    }

    .prose .tabbed-set {
        @apply relative flex flex-wrap;
    }

    .prose .tabbed-set .tabbed-content {
        @apply order-last hidden pl-4;
    }

    .prose .tabbed-set label {
        @apply mx-2 w-auto cursor-pointer p-1;
    }

    .prose .tabbed-set input {
        @apply absolute opacity-0;
    }

    .prose .tabbed-set input:nth-child(n + 1) {
        @apply text-[#333333];
    }

    .prose .tabbed-set input:nth-child(n + 1):checked + label {
        @apply text-[#ff5252];
    }

    .prose
        .tabbed-set
        input:nth-child(n + 1):checked
        + label
        + .tabbed-content {
        @apply block;
    }

    .prose :is(.admonition, summary, details) {
        @apply dark:text-jumbo-700 mb-2 p-4;
    }

    .prose .icon {
        @apply mr-1 inline-block align-middle;
    }

    .prose .icon svg {
        @apply mb-1 inline-block h-5 w-5 stroke-0;
    }

    .prose summary > :last-child {
        @apply mb-0;
    }

    /* default for custom types */
    .prose :is(.admonition, summary, details) {
        @apply border-l-8 border-purple-600 bg-purple-100;
    }

    /** native types */
    .prose :is(.caution, .warning, .attention) {
        @apply border-l-8 border-orange-600 bg-orange-100;
    }

    .prose :is(.success, .check, .done) {
        @apply border-l-8 border-green-600 bg-green-100;
    }

    .prose :is(.question, .help, .faq) {
        @apply border-l-8 border-green-400 bg-green-100;
    }

    .prose :is(.failure, .fail, .missing) {
        @apply border-l-8 border-red-600 bg-red-100;
    }

    .prose :is(.danger, .error) {
        @apply border-l-8 border-red-500 bg-red-100;
    }
    .prose .bug {
        @apply border-l-8 border-pink-500 bg-pink-100;
    }

    .prose :is(.tip, .hint, .important) {
        @apply border-l-8 border-teal-500 bg-teal-100;
    }

    .prose :is(.info, .todo) {
        @apply border-l-8 border-blue-500 bg-blue-100;
    }

    .prose :is(.abstract, .summary, .tldr) {
        @apply border-l-8 border-cyan-400 bg-cyan-100;
    }

    .prose .note {
        @apply border-l-8 border-yellow-500 bg-yellow-100;
    }

    .prose :is(.quote, .cite) {
        @apply border-l-8 border-gray-500 bg-gray-100;
    }

    .prose :is(.admonition, summary, details) .icon svg {
        @apply fill-current stroke-current;
    }

    .prose :is(a, p) {
        @apply break-words;
    }

    .prose a {
        @apply hover:no-underline;
    }

    .prose :is(video, iframe, img) {
        @apply max-w-full;
    }

    .prose img {
        @apply my-0 inline-block;
    }

    .prose .highlighttable {
        @apply block resize-x max-w-full rounded-xl bg-[#002b36] text-[#839496] overflow-x-auto;
    }

    .prose .highlighttable .filename {
        @apply ml-2;
    }

    .prose .highlighttable * {
        @apply rounded-none p-0;
    }

    .prose .highlighttable pre {
        @apply m-0 p-4;
    }

    .prose .highlighttable .code pre {
        @apply bg-[#002b36] text-[#839496];
    }

    .prose .highlighttable .linenos {
        @apply select-none;
    }

    .prose
        :where(blockquote p:first-of-type):not(:where([class~="not-prose"]
                *))::before {
        content: "";
    }

    .prose
        :where(blockquote p:last-of-type):not(:where([class~="not-prose"]
                *))::after {
        content: "";
    }

    .prose blockquote dd {
        @apply font-normal lg:font-light text-gray-600 dark:text-jumbo-400;
    }

    .dropdown_item {
        @apply dark:text-jumbo-50 dark:hover:bg-jumbo-800 hover:dropdown_item_active dark:disabled:bg-jumbo-900 disabled:dark:hover:text-jumbo-50 block px-4 py-2 text-sm text-gray-700 disabled:cursor-not-allowed disabled:bg-gray-400 disabled:hover:text-gray-700;
    }

    .dropdown_item_container {
        @apply py-1;
    }

    .dropdown_item_active {
        @apply bg-gray-100 text-gray-900;
    }

    .next_prev_buttons {
        @apply kho-button-border kho-button-bg kho-button-bg-hover kho-button-bg-disabled kho-button-text kho-button-border-focus inline-flex items-center rounded-xl border px-2.5 py-1.5 text-xs font-medium leading-4 disabled:cursor-not-allowed sm:px-3 sm:py-2 sm:text-sm;
    }

    .pagination_next_prev_buttons {
        @apply kho-button-border kho-button-bg kho-button-bg-hover kho-button-bg-disabled kho-button-text kho-button-border-focus relative inline-flex items-center rounded-xl border bg-white px-4 py-2 text-sm font-medium;
    }

    .form-control,
    .form-select {
        @apply kho-button-text kho-button-bg kho-button-border kho-button-border-focus block w-full min-w-0 flex-1 rounded-xl sm:text-sm;
    }

    .form-check {
        @apply kho-button-bg kho-button-border kho-button-border-focus;
    }

    .form-select {
        @apply resize-y;
    }

    .picker {
        @apply inline-flex;
    }

    .input-group {
        @apply flex;
    }

    .input-group-text {
        @apply inline-flex items-center sm:text-sm px-3 rounded-l-md border border-r-0 kho-button-border kho-button-bg-darker;
    }

    .input-group-text + .form-control {
        @apply flex-1 block w-full min-w-0 rounded-none rounded-r-md kho-button-border kho-button-bg;
    }

    #id_honeypot {
        @apply hidden;
    }

    .markdownx-preview {
        @apply prose dark:prose-invert lg:prose-lg xl:prose-xl;
    }

    .quotes p:not(:first-of-type) {
        @apply hidden;
    }

    .todo_header_element {
        @apply px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300;
    }

    .todo_element {
        @apply whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm;
    }
}

@layer utilities {
    .leading-11 {
        line-height: 3.5rem;
    }
}

